<resources>
    <string name="app_name">LoftMoney</string>
    <string name="name_hint">Name</string>
    <string name="price_hint">Price</string>
    <string name="add_button">Add</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="balance">Balance</string>
    <string name="success_added">Item added successfully</string>
    <string name="connection_lost">Sorry, we can"'"t load money list</string>
    <string name="toolbar_title">Your budget</string>
    <string name="action_login">Sign in</string>/>
    <string name="selected">Selected: </string>
    <string name="delete_items_title">Delete</string>
    <string name="delete_items_message">Remove selected items exactly?</string>
    <string name="action_no">No</string>
    <string name="action_yes">Yes</string>
    <string name="balance_finance_title">Available finance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <string name="price_with_currency">%1$s $</string>

    <string name="client_ID">199081525227-6in7jndouqlu86i8iok46s3arg68qv20.apps.googleusercontent.com</string>
    <string name="client_secret">gLLXNZQywgJEW0c4ZldeX-Zy</string>
</resources>